<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:ignore="RtlSymmetry">

    <TextView
        android:id="@+id/heading"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/links_heading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_webcast"
        style="@style/Clickable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/links_space_between_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heading">

        <TextView
            android:id="@+id/title"
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingEnd="@dimen/radio_button_text_gap"
            android:text="@string/links_webcast"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imageBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"

            android:contentDescription="@string/links_image_content_description"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/open_in_new"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/title"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_wiki"
        style="@style/Clickable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/links_space_between_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_webcast">

        <TextView
            android:id="@+id/title2"
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingEnd="@dimen/radio_button_text_gap"
            android:text="@string/links_wiki"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imageBtn2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageBtn2"
            android:layout_width="48dp"
            android:layout_height="48dp"

            android:contentDescription="@string/links_image_content_description"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/open_in_new"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/title2"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_article"
        style="@style/Clickable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/links_space_between_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_wiki">

        <TextView
            android:id="@+id/title3"
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingEnd="@dimen/radio_button_text_gap"
            android:text="@string/links_article"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imageBtn3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageBtn3"
            android:layout_width="48dp"
            android:layout_height="48dp"

            android:contentDescription="@string/links_image_content_description"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/open_in_new"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/title3"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>